feat: archive old blog posts, fix tests and improve AuthorizeClient typing

--- a/apps/docs/blog/2025-03-24-introducing-kilpi.mdx
+++ b/apps/docs/blog/2025-03-24-introducing-kilpi.mdx
@@ -5,6 +5,7 @@ authorUrl: https://jussinevavuori.com
 authorImage: https://cdn.bsky.app/img/avatar/plain/did:plc:55joowvmvf4vw6n734h7skux/bafkreih2usu2wuuwrytodiqhylcfio77mozhzoqfbxi2sugvwf5g5wvxc4@jpeg
 date: 2025-03-24
 summary: I'm proud to announce that I've finally finished polishing, open-sourcing and documenting the first version of Kilpi!
+archivedAt: 2025-10-08
 ---
 
 I'm proud to announce that I've finally finished polishing, open-sourcing and documenting the first version of Kilpi!
