--- a/apps/docs/blog/2025-03-27-introducing-the-protected-query-pattern.mdx
+++ b/apps/docs/blog/2025-03-27-introducing-the-protected-query-pattern.mdx
@@ -7,6 +7,7 @@ authorImage: https://cdn.bsky.app/img/avatar/plain/did:plc:55joowvmvf4vw6n734h7s
 date: 2025-03-27
 summary: This article introduces the protected query pattern for authorizing your data queries with a clean and powerful API.
 recommended: true
+archivedAt: 2025-10-08
 ---
 
 Securing modern full-stack applications can be complex. You have to manage authorizations in many different contexts from UI to data mutation functions.
