--- a/apps/docs/blog/2025-03-28-how-to-protect-nextjs-server-actions.mdx
+++ b/apps/docs/blog/2025-03-28-how-to-protect-nextjs-server-actions.mdx
@@ -5,6 +5,7 @@ authorUrl: https://jussinevavuori.com
 authorImage: https://cdn.bsky.app/img/avatar/plain/did:plc:55joowvmvf4vw6n734h7skux/bafkreih2usu2wuuwrytodiqhylcfio77mozhzoqfbxi2sugvwf5g5wvxc4@jpeg
 date: 2025-03-28
 summary: This article introduces you to using Kilpi to authorize your server actions.
+archivedAt: 2025-10-08
 ---
 
 
