--- a/apps/docs/docs/getting-started/examples.mdx
+++ b/apps/docs/docs/getting-started/examples.mdx
@@ -4,6 +4,11 @@ title: Examples
 
 To help you get started, we've provided example projects. They can all be found in the `/examples` folder on [Github](https://github.com/Jussinevavuori/kilpi/tree/main/examples). Find your example below.
 
+<Aside type="warning">
+  The examples are for Kilpi before version 0.20. Hold tight while we rewrite
+  the examples for the new API!
+</Aside>
+
 - [**Next.js App Router — News Demo (RSC Version)**](https://github.com/Jussinevavuori/kilpi/tree/main/examples/next-rsc-demo)
 
   This project uses Next.js App Router & React Server Components for a simple news application to demonstrate implementing basic authorization concepts.
