--- a/apps/docs/docs/plugins/audit.mdx
+++ b/apps/docs/docs/plugins/audit.mdx
@@ -209,5 +209,5 @@ You may be tempted to use the `AuditPlugin` for logging, and it can be done. How
   });
 
 + // Logging using hooks
-+ Kilpi.hooks.onAfterAuthorization((e) => console.log(format(e)));
++ Kilpi.$hooks.onAfterAuthorization((e) => console.log(format(e)));
 ```
