docs: descriptions on each page and new examples page

--- a/apps/docs/docs/advanced/hooks.mdx
+++ b/apps/docs/docs/advanced/hooks.mdx
@@ -1,5 +1,6 @@
 ---
 title: Hooks
+description: Learn about Kilpi's hooks system for advanced customization and event handling.
 ---
 
 <Aside>This is an advanced concept and not required for most use-cases.</Aside>
