--- a/apps/docs/docs/advanced/plugin.mdx
+++ b/apps/docs/docs/advanced/plugin.mdx
@@ -1,5 +1,6 @@
 ---
 title: Plugins
+description: Learn about Kilpi's plugin system for extending functionality.
 ---
 
 Plugins are used to extend the functionality of both `Kilpi` and `KilpiClient`. They can access the instance themselves, extend their public interface and e.g. access hooks for any custom functionality.
