--- a/apps/docs/docs/concepts/authorizing.mdx
+++ b/apps/docs/docs/concepts/authorizing.mdx
@@ -1,5 +1,6 @@
 ---
 title: Authorizing
+description: All you need to know about authorizing with Kilpi's authorize() and assert() APIs.
 sidebar:
   order: 1
 ---
