--- a/apps/docs/docs/concepts/protected-queries.mdx
+++ b/apps/docs/docs/concepts/protected-queries.mdx
@@ -1,5 +1,6 @@
 ---
 title: Protected queries
+description: Learn how to define and use protected queries with Kilpi.$query for co-located authorization logic.
 sidebar:
   order: 5
 ---
