--- a/apps/docs/docs/getting-started/support.mdx
+++ b/apps/docs/docs/getting-started/support.mdx
@@ -1,5 +1,6 @@
 ---
 title: Support and contribute to development
+description: How to support Kilpi development and contribute to the project.
 sidebar:
   label: Support & contribution
 ---
