--- a/apps/docs/docs/plugins/endpoint.mdx
+++ b/apps/docs/docs/plugins/endpoint.mdx
@@ -1,5 +1,6 @@
 ---
 title: Endpoint Plugin
+description: Create a web standard endpoint for requesting authorization decisions, used with the Kilpi client.
 ---
 
 The endpoint plugin is already included in `@kilpi/core`. Apply the plugin in your Kilpi configuration as follows. [This plugin is intended to be used together with `@kilpi/client`](/docs/concepts/usage-on-client).
