--- a/apps/docs/docs/getting-started/examples.mdx
+++ b/apps/docs/docs/getting-started/examples.mdx
@@ -1,22 +1,12 @@
 ---
 title: Examples
+description: Example projects using Kilpi
 ---
 
-To help you get started, we've provided example projects. They can all be found in the `/examples` folder on [Github](https://github.com/Jussinevavuori/kilpi/tree/main/examples). Find your example below.
+To help you get started, we've provided some example projects. They can all be found in the `/examples` folder on [Github](https://github.com/Jussinevavuori/kilpi/tree/main/examples). Find your example below.
 
-<Aside type="warning">
-  The examples are for Kilpi before version 1.0. Hold tight while we rewrite the
-  examples for the new API!
-</Aside>
+### [**Next.js Articles App Demo**](https://github.com/Jussinevavuori/kilpi/tree/main/examples/next-rsc-demo)
 
-- [**Next.js App Router — News Demo (RSC Version)**](https://github.com/Jussinevavuori/kilpi/tree/main/examples/next-rsc-demo)
-
-  This project uses Next.js App Router & React Server Components for a simple news application to demonstrate implementing basic authorization concepts.
-
-  Includes protected queries, protected actions, roles, server actions with `next-safe-action` and middleware, and more.
-
-  Stack: [Better Auth](https://www.better-auth.com/), [Kilpi](https://kilpi.vercel.app), [Bun SQLite](https://bun.sh/docs/api/sqlite), [next-safe-action](https://next-safe-action.dev/), [Shadcn/UI](https://ui.shadcn.com/), [Tailwind CSS](https://tailwindcss.com/), [React Hook Form](https://react-hook-form.com/), [Zod](https://zod.dev).
-
-- [**Next.js App Router — News Demo (Client version)**](https://github.com/Jussinevavuori/kilpi/tree/main/examples/next-client-demo)
-
-  This project implements the same demo as the one listed above, but uses the `@kilpi/client` and `@kilpi/react-client` packages in places to demo protecting UI on the client.
+> Simple Next.js CRUD app for articles to demonstrate basic Kilpi usage in a full-stack application, as well as usage on clients and in the UI, both on client and on the server.
+>
+> **Stack**: [Kilpi](https://kilpi.vercel.app), [React](https://react.dev/), [Next.js](https://nextjs.org/), [Better Auth](https://www.better-auth.com/), [Bun SQLite](https://bun.sh/docs/api/sqlite), [Shadcn/UI](https://ui.shadcn.com/), [Tailwind CSS](https://tailwindcss.com/), [React Hook Form](https://react-hook-form.com/), [Zod](https://zod.dev).
